--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Label layoutX="67.0" layoutY="16.0" text="OpenAir">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <ListView fx:id="list_view" layoutX="15.0" layoutY="105.0" prefHeight="279.0" prefWidth="569.0" />
+      <ListView fx:id="list_view" layoutX="15.0" layoutY="105.0" onMouseClicked="#clicked" prefHeight="279.0" prefWidth="569.0" />
       <TextField layoutX="186.0" layoutY="17.0" onKeyPressed="#keyed" prefHeight="27.0" prefWidth="321.0" />
       <Button layoutX="515.0" layoutY="17.0" mnemonicParsing="false" onKeyPressed="#keyed" onMouseClicked="#pressed" prefHeight="27.0" prefWidth="66.0" text="Go" />
       <Label fx:id="value_label" layoutX="283.0" layoutY="65.0">
